--- a/style.css
+++ b/style.css
@@ -1,96 +1,168 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  color: #000;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  background: url("./public/gold-wavy-pattern-luxurious-golden-260nw-1896978217.webp")
+    center no-repeat;
+  background-size: 100%;
+  max-width: 1600px;
 }
 
-h1 {
-  font-size: 3.2em;
+.header {
+  max-width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #000;
+}
+
+.header__logo {
+  font-size: 24px;
+  color: #fff;
+}
+
+.header__list {
+  list-style: none;
+  display: flex;
+}
+
+.header__list_item {
+  margin-right: 20px;
+}
+
+.header__list_item:last-child {
+  margin-right: 0;
+}
+
+.header__list_link {
+  text-decoration: none;
+  color: #000;
+}
+
+.burger-menu {
+  font-size: 20px;
+}
+.content {
+  display: flex;
+  justify-content: center;
+}
+.content__block_title,
+.content__block_desk {
+  flex: 1;
+  margin-left: 175px;
+  margin-top: 30px;
+  font-weight: 700;
+}
+figure {
+  margin-left: 175px;
+  margin-top: 30px;
+}
+.content__block_desk {
+  max-width: 400px;
+}
+.feedback {
+  background-color: #fff;
+  /* padding: 9rem 0; */
+  max-width: 600px;
+}
+.feedback-slider-item {
+  padding-bottom: 5rem;
+}
+.feedback-block {
+  position: relative;
+}
+.feedback-block .button-order {
+  position: absolute;
+  bottom: -3rem;
+  left: 15rem;
+  z-index: 19;
+}
+.feedback-block .button-order:before {
+  content: "";
+  background-image: url("../img/heart.png");
+  background-size: 100%;
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  margin-right: 1.5rem;
+  position: relative;
+  top: 0.4rem;
+}
+.feedback-heading {
+  margin-top: 4rem;
+  font-size: 3rem;
+  font-family: "Circe Extra Bold", sans-serif;
+  text-align: center;
   line-height: 1.1;
 }
+.feedback-text {
+  text-align: center;
+  margin: 3rem 0;
+}
+.feedback-signature {
+  text-align: center;
+}
+.feedback-signature span {
+  font-family: "Circe Extra Bold", sans-serif;
+}
+.feedback .slick-slide img {
+  position: relative;
+  left: 5rem;
+}
+.footer {
+  margin-top: 250px;
+  margin-bottom: 0;
+  background-color: #000;
+  padding: 20px;
+  color: rgb(247, 247, 247);
+}
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* btn */
+
+.main-slider-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 3rem;
+  height: 3rem;
+  border: none;
+  padding: 0;
+  z-index: 10;
+  background-color: transparent;
+}
+.main-slider-btn img {
+  width: 100%;
+}
+.main-prev-btn {
+  left: 0;
+}
+.main-next-btn {
+  right: 0;
+}
+.button-order {
+  position: relative;
+}
+img {
+  max-width: 500px;
+  max-height: 400px;
+}
+
+.footer__contact-info {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.footer__contact-address {
+  margin: 5px 0;
 }
 
-.card {
-  padding: 2em;
+.contact-info-link {
+  display: block;
+  margin: 5px 0;
+  color: #000;
 }
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.footer__contact-socialnet {
+  text-decoration: none;
+  color: #000;
 }
