--- a/style.css
+++ b/style.css
@@ -1,168 +1,355 @@
 body {
-  color: #000;
   margin: 0;
   padding: 0;
-  background: url("./public/gold-wavy-pattern-luxurious-golden-260nw-1896978217.webp")
-    center no-repeat;
-  background-size: 100%;
-  max-width: 1600px;
+  font-family: Arial, sans-serif;
 }
 
-.header {
-  max-width: 100%;
-  margin: 0 auto;
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #000;
 }
 
-.header__logo {
-  font-size: 24px;
-  color: #fff;
-}
-
-.header__list {
-  list-style: none;
+.left-column,
+.right-column {
   display: flex;
+  align-items: center;
+  font-size: 12px;
 }
 
-.header__list_item {
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-info {
   margin-right: 20px;
 }
 
-.header__list_item:last-child {
-  margin-right: 0;
+.social-media-icons {
+  /* Стили для иконок социальных сетей */
 }
 
-.header__list_link {
-  text-decoration: none;
-  color: #000;
-}
-
-.burger-menu {
-  font-size: 20px;
-}
-.content {
+.menu {
   display: flex;
   justify-content: center;
+  align-items: center;
+
+  height: 100px;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
 }
-.content__block_title,
-.content__block_desk {
-  flex: 1;
-  margin-left: 175px;
-  margin-top: 30px;
-  font-weight: 700;
+
+.menu ul {
+  list-style-type: none;
+  display: flex; /* Добавляем flex для пунктов меню */
 }
-figure {
-  margin-left: 175px;
-  margin-top: 30px;
+
+.menu li {
+  margin: 0 50px;
 }
-.content__block_desk {
-  max-width: 400px;
+
+.menu li:hover {
+  color: red;
 }
-.feedback {
-  background-color: #fff;
-  /* padding: 9rem 0; */
-  max-width: 600px;
+
+/* dropdown */
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-.feedback-slider-item {
-  padding-bottom: 5rem;
-}
-.feedback-block {
-  position: relative;
-}
-.feedback-block .button-order {
-  position: absolute;
-  bottom: -3rem;
-  left: 15rem;
-  z-index: 19;
-}
-.feedback-block .button-order:before {
-  content: "";
-  background-image: url("../img/heart.png");
-  background-size: 100%;
-  width: 2rem;
-  height: 2rem;
+
+.menu li {
   display: inline-block;
-  margin-right: 1.5rem;
   position: relative;
-  top: 0.4rem;
-}
-.feedback-heading {
-  margin-top: 4rem;
-  font-size: 3rem;
-  font-family: "Circe Extra Bold", sans-serif;
-  text-align: center;
-  line-height: 1.1;
-}
-.feedback-text {
-  text-align: center;
-  margin: 3rem 0;
-}
-.feedback-signature {
-  text-align: center;
-}
-.feedback-signature span {
-  font-family: "Circe Extra Bold", sans-serif;
-}
-.feedback .slick-slide img {
-  position: relative;
-  left: 5rem;
-}
-.footer {
-  margin-top: 250px;
-  margin-bottom: 0;
-  background-color: #000;
-  padding: 20px;
-  color: rgb(247, 247, 247);
+  font-weight: 500;
 }
 
-/* btn */
+.menu li:hover .dropdown {
+  display: block;
+}
 
-.main-slider-btn {
+.dropdown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff; /* Белый фон */
+  border: none;
+  padding: 10px;
+  z-index: 1000; /* Устанавливаем высокий z-index */
+}
+
+.dropdown a {
+  display: block;
+  width: auto; /* Подстраивается под ширину контента */
+  text-decoration: none;
+  color: #333; /* Цвет ссылок */
+  padding: 5px 0;
+}
+
+.gallery {
+  position: relative;
+  width: 100%;
+  height: 800px;
+  overflow: hidden;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+  position: absolute;
+  transition: transform 0.5s ease-in-out;
+}
+
+.gallery button {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 3rem;
-  height: 3rem;
+  background-color: rgba(255, 255, 255, 0.5);
   border: none;
-  padding: 0;
-  z-index: 10;
-  background-color: transparent;
+  padding: 10px;
 }
-.main-slider-btn img {
-  width: 100%;
+
+.gallery .prev {
+  left: 10px;
 }
-.main-prev-btn {
+
+.gallery .next {
+  right: 10px;
+}
+
+/* modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 228, 225, 0.5); /* Нежный цвет фона */
 }
-.main-next-btn {
-  right: 0;
-}
-.button-order {
-  position: relative;
-}
-img {
-  max-width: 500px;
-  max-height: 400px;
+/* отцентровать окно попап */
+
+.modal-content {
+  background-color: #fff; /* Белый фон контента */
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 300px; /* Ширина окна */
+  text-align: center; /* Выравнивание по центру */
 }
 
-.footer__contact-info {
-  text-align: center;
+.close {
+  color: #ff5733; /* Яркий цвет кнопки */
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
-.footer__contact-address {
-  margin: 5px 0;
-}
-
-.contact-info-link {
-  display: block;
-  margin: 5px 0;
-  color: #000;
-}
-.footer__contact-socialnet {
+.close:hover,
+.close:focus {
+  color: #ff8c66; /* Цвет кнопки при наведении */
   text-decoration: none;
-  color: #000;
+  cursor: pointer;
+}
+
+input[type="tel"] {
+  width: calc(
+    100% - 20px
+  ); /* Ширина поля ввода номера телефона с учетом отступов */
+  margin-bottom: 10px; /* Отступ между полем ввода и кнопкой */
+}
+
+button {
+  background-color: #ff5733; /* Яркий цвет кнопки */
+  color: #fff; /* Цвет текста на кнопке */
+  padding: 10px 20px;
+  border: none;
+}
+
+/* btn scroll */
+.fixed-buttons {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  z-index: 200;
+}
+.button {
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  text-align: center;
+  font-size: 16px;
+}
+/* модалка к кнопке */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+/* grid */
+
+body,
+html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #f5f4f4;
+  font-size: 13px;
+}
+@supports (display: grid) {
+  body,
+  html {
+    display: block;
+  }
+}
+
+.message {
+  border: 1px solid #d2d0d0;
+  padding: 2em;
+  font-size: 1.7vw;
+  box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
+}
+@supports (display: grid) {
+  .message {
+    display: none;
+  }
+}
+
+.section {
+  display: none;
+  padding: 2rem;
+}
+@media screen and (min-width: 768px) {
+  .section {
+    padding: 4rem;
+  }
+}
+@supports (display: grid) {
+  .section {
+    display: block;
+  }
+}
+
+h1 {
+  font-size: 2rem;
+  margin: 0 0 1.5em;
+}
+
+.grid {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 150px;
+  grid-auto-flow: row dense;
+}
+
+.item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  background: #0c9a9a;
+  color: #fff;
+  grid-column-start: auto;
+  grid-row-start: auto;
+  color: #fff;
+  background: url("./public/\ укл.webp");
+  background-size: cover;
+  background-position: center;
+  box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
+  transition: transform 0.3s ease-in-out;
+  cursor: pointer;
+  counter-increment: item-counter;
+}
+.item:nth-of-type(3n) {
+  background-image: url("./public/2024-01-19\ 11.34.09.jpg");
+}
+.item:nth-of-type(4n) {
+  background-image: url("./public/2024-01-19\ 11.34.17.jpg");
+}
+.item:nth-of-type(5n) {
+  background-image: url("./public/\ блонд.webp");
+}
+.item:nth-of-type(6n) {
+  background-image: url("./public/\ блонд.webp");
+}
+.item:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.3;
+  transition: opacity 0.3s ease-in-out;
+}
+.item:hover {
+  transform: scale(1.05);
+}
+.item:hover:after {
+  opacity: 0;
+}
+.item--medium {
+  grid-row-end: span 2;
+}
+.item--large {
+  grid-row-end: span 3;
+}
+.item--full {
+  grid-column-end: auto;
+}
+@media screen and (min-width: 768px) {
+  .item--full {
+    grid-column: 1/-1;
+    grid-row-end: span 2;
+  }
+}
+.item__details {
+  position: relative;
+  z-index: 1;
+  padding: 15px;
+  color: #444;
+  background: #fff;
+  text-transform: lowercase;
+  letter-spacing: 1px;
+  color: #828282;
+}
+.item__details:before {
+  content: counter(item-counter);
+  font-weight: bold;
+  font-size: 1.1rem;
+  padding-right: 0.5em;
+  color: #444;
 }
