--- a/style.css
+++ b/style.css
@@ -356,8 +356,8 @@ h1 {
   padding: 5px;
   color: #fff;
   text-transform: lowercase;
-  font-weight: 700;
-  font-size: 25px;
+  font-weight: 500;
+  font-size: 16px;
   background: #000;
 
   letter-spacing: 1px;
@@ -368,7 +368,7 @@ h1 {
   font-weight: bold;
   font-size: 1.1rem;
   padding-right: 0.5em;
-  color: #444;
+  color: #000;
 }
 
 /* бургер */
@@ -699,4 +699,17 @@ header {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 228, 225, 0.5); /* Нежный цвет фона */
+}
+/* соц сети */
+.social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icon {
+  margin: 0 10px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
 }
