--- a/price.css
+++ b/price.css
@@ -1,6 +1,11 @@
 body {
-  font-family: Arial, sans-serif;
+  background-color: #d6eaf8;
+  color: #333;
+
   text-align: center;
+  background-color: #f7e9d6;
+
+  font-family: "Roboto", sans-serif;
 }
 .price-header {
   font-size: 24px;
@@ -9,9 +14,15 @@ body {
 .price-list {
   display: grid;
   grid-template-columns: 1fr auto;
-  max-width: 600px;
+  max-width: 1000px;
   margin: 0 auto;
   text-align: left;
   font-size: 18px;
   line-height: 3;
+}
+
+div {
+  border: 1px solid #333;
+  font-weight: bold;
+  color: #42403e;
 }
