--- a/style.css
+++ b/style.css
@@ -522,10 +522,6 @@ header {
   margin-right: 20px;
 }
 
-.social-media-icons {
-  /* Стили для иконок социальных сетей */
-}
-
 .menu {
   display: flex;
   justify-content: center;
@@ -535,51 +531,6 @@ header {
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 0.5px;
-}
-
-/* Медиа-запрос для мобильных устройств до 950px */
-@media (max-width: 950px) {
-  header {
-    flex-direction: column; /* Изменяем направление flex-контейнера на колонку */
-    padding: 10px; /* Уменьшаем отступы */
-  }
-
-  .left-column,
-  .right-column {
-    font-size: 10px; /* Уменьшаем размер шрифта */
-  }
-
-  .menu {
-    height: auto; /* Устанавливаем высоту меню по содержимому */
-    flex-direction: column; /* Изменяем направление flex-контейнера на колонку */
-    text-align: center; /* Выравниваем текст по центру */
-    margin-top: 10px; /* Добавляем отступ сверху */
-  }
-
-  .contact-info {
-    margin-right: 0; /* Убираем отступ справа */
-    margin-bottom: 10px; /* Добавляем отступ снизу */
-  }
-
-  .social-media-icons {
-    margin-bottom: 10px; /* Добавляем отступ снизу */
-  }
-}
-.menu ul {
-  list-style-type: none;
-  display: flex; /* Добавляем flex для пунктов меню */
-  justify-content: center; /* Выравниваем пункты по центру */
-  padding: 0;
-  margin: 0;
-}
-
-.menu li {
-  margin: 0 20px; /* Уменьшаем отступы между пунктами */
-  font-size: 14px; /* Уменьшаем размер шрифта */
-}
-
-.menu li:hover {
-  color: red;
 }
 
 /* dropdown */
@@ -600,19 +551,19 @@ header {
   display: block;
 }
 
-/* Медиа-запрос для мобильных устройств до 950px */
-@media (max-width: 950px) {
-  .menu ul {
+@media (max-width: 850px) {
+  .menu1 ul {
     flex-direction: column; /* Изменяем направление на колонку */
     align-items: center; /* Выравниваем по центру */
   }
 
-  .menu li {
+  .menu1 li {
     margin: 10px 0; /* Добавляем отступы сверху и снизу */
     font-size: 16px; /* Возвращаем обычный размер шрифта */
+    display: none;
   }
 
-  .dropdown {
+  .dropdown1 {
     position: static; /* Изменяем позиционирование на статическое */
     transform: none; /* Сбрасываем трансформацию */
     width: auto; /* Ширина по содержимому */
@@ -624,7 +575,7 @@ header {
     z-index: auto; /* Сбрасываем z-index */
   }
 }
-.dropdown a {
+.dropdown1 a {
   display: block;
   width: auto; /* Подстраивается под ширину контента */
   text-decoration: none;
@@ -632,7 +583,7 @@ header {
   padding: 5px 0;
 }
 
-.dropdown a:hover {
+.dropdown1 a:hover {
   color: #000;
 }
 
@@ -729,7 +680,7 @@ header {
   }
 
   .section {
-    margin-top: -150px;
+    margin-top: -110px;
   }
   .wrapp {
     flex-direction: column;
@@ -765,4 +716,49 @@ header {
   .about__title {
     font-size: 25px;
   }
+}
+
+/* Медиа-запрос для мобильных устройств до 950px */
+@media (max-width: 800) {
+  header {
+    flex-direction: column; /* Изменяем направление flex-контейнера на колонку */
+    padding: 10px; /* Уменьшаем отступы */
+  }
+
+  .left-column,
+  .right-column {
+    font-size: 10px; /* Уменьшаем размер шрифта */
+  }
+
+  .menu {
+    height: auto; /* Устанавливаем высоту меню по содержимому */
+    flex-direction: column; /* Изменяем направление flex-контейнера на колонку */
+    text-align: center; /* Выравниваем текст по центру */
+    margin-top: 10px; /* Добавляем отступ сверху */
+  }
+
+  .contact-info {
+    margin-right: 0; /* Убираем отступ справа */
+    margin-bottom: 10px; /* Добавляем отступ снизу */
+  }
+
+  .social-media-icons {
+    margin-bottom: 10px; /* Добавляем отступ снизу */
+  }
+}
+.menu ul {
+  list-style-type: none;
+  display: flex; /* Добавляем flex для пунктов меню */
+  justify-content: center; /* Выравниваем пункты по центру */
+  padding: 0;
+  margin: 0;
+}
+
+.menu li {
+  margin: 0 20px; /* Уменьшаем отступы между пунктами */
+  font-size: 14px; /* Уменьшаем размер шрифта */
+}
+
+.menu li:hover {
+  color: red;
 }
