--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ h1 {
   grid-column-start: auto;
   grid-row-start: auto;
   color: #fff;
-  background: url("./public/IMAGE\ 2024-01-23\ 11:16:07.jpg");
+  background: url("../IMAGE\ 2024-01-23\ 11:16:07.jpg");
   background-size: cover;
   background-position: center;
   box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
@@ -265,19 +265,19 @@ h1 {
   counter-increment: item-counter;
 }
 .item:nth-of-type(2n) {
-  background-image: url("./public/IMAGE\ 2024-01-23\ 11:19:05.jpg");
+  background-image: url("../IMAGE\ 2024-01-23\ 11:19:05.jpg");
 }
 .item:nth-of-type(3n) {
-  background-image: url("./public/_\ \(1\).jpeg");
+  background-image: url("../_\ \(1\).jpeg");
 }
 .item:nth-of-type(4n) {
-  background-image: url("./public/Снимок\ экрана\ 2024-01-25\ в\ 22.03.12.png");
+  background-image: url("../Снимок\ экрана\ 2024-01-25\ в\ 22.03.12.png");
 }
 .item:nth-of-type(5n) {
-  background-image: url("./public/_.jpeg"); /*good*/
+  background-image: url("../_.jpeg"); /*good*/
 }
 .item:nth-of-type(6n) {
-  background-image: url("./public/Women's\ ready\ to\ wear\ clothes\ made\ in\ USA\ using\ technical\ fabrics.jpeg");
+  background-image: url("../Women's\ ready\ to\ wear\ clothes\ made\ in\ USA\ using\ technical\ fabrics.jpeg");
 }
 .item:nth-of-type(7n) {
   background-image: url();
