--- a/style.css
+++ b/style.css
@@ -235,13 +235,13 @@ h1 {
   margin: 0 0 1.5em;
 }
 
+/* грид */
+
 .grid {
   display: grid;
-  grid-gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
 
-  grid-template-columns: repeat(2, 3fr);
-
-  grid-auto-rows: 150px;
   grid-auto-flow: row dense;
 }
 
@@ -251,12 +251,6 @@ h1 {
   flex-direction: column;
   justify-content: flex-end;
   box-sizing: border-box;
-  background: #0c9a9a;
-  color: #fff;
-  grid-column-start: auto;
-  grid-row-start: auto;
-  color: #fff;
-  background: url("./public/IMAGE\ 2024-01-23\ 11:16:07.jpg");
   background-size: cover;
   background-position: center;
   box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
@@ -264,25 +258,7 @@ h1 {
   cursor: pointer;
   counter-increment: item-counter;
 }
-.item:nth-of-type(2n) {
-  background-image: url("./public/IMAGE\ 2024-01-23\ 11:19:05.jpg");
-}
-.item:nth-of-type(3n) {
-  background-image: url("./public/_\ \(1\).jpeg");
-}
-.item:nth-of-type(4n) {
-  background-image: url("./public/Снимок\ экрана\ 2024-01-25\ в\ 22.03.12.png");
-}
-.item:nth-of-type(5n) {
-  background-image: url("./public/_.jpeg"); /*good*/
-}
-.item:nth-of-type(6n) {
-  background-image: url("./public/Women's\ ready\ to\ wear\ clothes\ made\ in\ USA\ using\ technical\ fabrics.jpeg");
-}
-.item:nth-of-type(7n) {
-  background-image: url();
-}
-.item:after {
+.item::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -297,40 +273,15 @@ h1 {
 .item:hover:after {
   opacity: 0;
 }
-.item--medium {
-  grid-row-end: span 2;
-}
-.item--large {
-  grid-row-end: span 3;
-}
-.item--full {
-  grid-column-end: auto;
-}
-@media screen and (min-width: 768px) {
-  .item--full {
-    grid-column: 1/-1;
-    grid-row-end: span 2;
-  }
-}
-.item__details {
-  position: relative;
-  z-index: 1;
-  padding: 5px;
-  color: #fff;
-  text-transform: lowercase;
-  font-weight: 500;
-  font-size: 16px;
-  background: #000;
 
-  letter-spacing: 1px;
-  color: #fff;
+.item__details {
+  max-width: 100%;
 }
-.item__details:before {
-  content: counter(item-counter);
-  font-weight: bold;
-  font-size: 1.1rem;
-  padding-right: 0.5em;
-  color: #000;
+
+@media screen and (max-width: 800px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
 
 /* бургер */
@@ -688,11 +639,11 @@ header {
   }
 
   .form-feed {
-    margin-left: 120px;
+    margin-left: 100px;
   }
 
   .form-feed2 {
-    margin-left: 120px;
+    margin-left: 60px;
   }
 
   .feed-btn {
@@ -718,7 +669,7 @@ header {
   }
 }
 
-/* Медиа-запрос для мобильных устройств до 950px */
+/* Медиа-запрос для мобильных устройств до 800 */
 @media (max-width: 800) {
   header {
     flex-direction: column; /* Изменяем направление flex-контейнера на колонку */
