--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ li a {
   display: block;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 800px) {
   .menu1 .dropdown-trigger:hover .dropdown1 {
     display: none;
   }
@@ -352,6 +352,10 @@ h1 {
   display: none;
   cursor: pointer;
 }
+.link-yaclains {
+  text-decoration: none;
+  color: #fff;
+}
 
 @media (max-width: 800px) {
   .navbar ul {
@@ -415,8 +419,11 @@ h1 {
   justify-content: stretch;
   align-items: center;
 }
-.feed-btn {
+.feed-btn a,
+.feed-btn2 a {
   border: none;
+  text-decoration: none;
+  color: #fff;
 }
 
 .feed-btn:hover,
@@ -458,7 +465,10 @@ footer {
   width: 50%;
   margin: 100px;
 }
-
+.link-phone-footer {
+  text-decoration: none;
+  color: #fff;
+}
 .photo {
   width: 50%;
   margin: 100px;
@@ -523,7 +533,7 @@ header {
   display: block;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 800px) {
   .menu1 ul {
     flex-direction: column; /* Изменяем направление на колонку */
     align-items: center; /* Выравниваем по центру */
@@ -533,6 +543,10 @@ header {
     margin: 10px 0; /* Добавляем отступы сверху и снизу */
     font-size: 16px; /* Возвращаем обычный размер шрифта */
     display: none;
+  }
+
+  .fixed-buttons {
+    margin-bottom: 80px;
   }
 
   .dropdown1 {
@@ -591,17 +605,6 @@ header {
   right: 10px;
 }
 
-/* modal */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 228, 225, 0.5); /* Нежный цвет фона */
-}
 /* соц сети */
 .social-icons {
   display: flex;
@@ -642,25 +645,43 @@ header {
 
 /* медиа запросы шапка */
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 400px) {
   body {
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
   .wrapp {
-    min-width: 100%;
+    width: 100%;
   }
-
+  .container__feedbek {
+    max-width: 300px;
+    padding-left: 0;
+    padding-right: 0;
+  }
   .section {
     margin-top: -110px;
+    width: 350px;
   }
+  .title__feedbek {
+    margin-left: 80px;
+  }
+
   .wrapp {
     flex-direction: column;
     align-items: center;
   }
   .form-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     max-width: 400px;
     max-height: fit-content;
+  }
+  .feed-btn {
+    margin-right: 35px;
   }
   .item__details {
     max-height: 400px;
@@ -669,24 +690,13 @@ header {
     margin-left: 100px;
   }
 
-  .form-feed2 {
-    margin-left: 60px;
-  }
-
-  .feed-btn {
-    margin-right: 10px;
-  }
   .photo {
     display: none;
   }
-  footer {
-    background-color: #333232;
-    color: #ccc;
-    margin-top: 20px;
-  }
+
   .about-us {
-    padding-left: 20px;
-    width: 750px;
+    padding-left: 50px;
+    width: 300px;
   }
 
   .about-us-text {
@@ -699,6 +709,11 @@ header {
 
 /* Медиа-запрос для мобильных устройств до 800 */
 @media (max-width: 800) {
+  body {
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+  }
   header {
     flex-direction: column; /* Изменяем направление flex-контейнера на колонку */
     padding: 0px;
@@ -720,6 +735,7 @@ header {
   .contact-info {
     margin-right: 0; /* Убираем отступ справа */
     margin-bottom: 10px; /* Добавляем отступ снизу */
+    padding-bottom: 30px;
   }
 
   .social-media-icons {
@@ -742,11 +758,6 @@ header {
   .menu li:hover {
     color: red;
   }
-
-  .wrapp__image {
-    max-width: 350px;
-    max-height: 350px;
-  }
 }
 
 @media screen and (max-width: 400px) {
@@ -755,12 +766,16 @@ header {
   }
 
   .wrapp {
-    min-width: 100%;
+    max-width: 100%;
+  }
+  .gallery {
+    height: 500px;
+    width: 400px;
   }
 
-  .section {
+  /* .section {
     margin-top: -110px;
-  }
+  } */
   .wrapp {
     flex-direction: column;
     align-items: center;
@@ -780,9 +795,9 @@ header {
     margin-left: 60px;
   }
 
-  .feed-btn {
+  /* .feed-btn {
     margin-right: 10px;
-  }
+  } */
   .photo {
     display: none;
   }
@@ -790,17 +805,22 @@ header {
     background-color: #333232;
     color: #ccc;
     margin-top: 20px;
-  }
-  .about-us {
-    padding-left: 20px;
-    width: 750px;
+    width: 400px;
+    box-sizing: border-box;
   }
 
   .about-us-text {
-    font-size: 16px;
+    font-size: 12px;
   }
   .about__title {
     font-size: 25px;
+  }
+  .image-us {
+    width: 300px;
+    height: 300px;
+  }
+  .container-text {
+    width: 350px;
   }
 }
 
@@ -809,7 +829,9 @@ header {
     flex-direction: column; /* Изменяем направление flex-контейнера на колонку */
     padding: 0px;
   }
-
+  .button {
+    margin-right: 55px;
+  }
   .left-column,
   .right-column {
     font-size: 10px; /* Уменьшаем размер шрифта */
@@ -826,6 +848,8 @@ header {
   .contact-info {
     margin-right: 0; /* Убираем отступ справа */
     margin-bottom: 10px; /* Добавляем отступ снизу */
+    padding-bottom: 200px;
+    padding-right: 50px;
   }
 
   .social-media-icons {
