--- a/price.css
+++ b/price.css
@@ -1,15 +1,12 @@
 body {
-  background-color: #d6eaf8;
   color: #333;
 
   text-align: center;
-  background-color: #f7e9d6;
-
-  font-family: "Roboto", sans-serif;
 }
 .price-header {
   font-size: 24px;
   margin-top: 20px;
+  color: cornflowerblue;
 }
 .price-list {
   display: grid;
@@ -20,9 +17,150 @@ body {
   font-size: 18px;
   line-height: 3;
 }
+.item {
+  text-align: left;
+  position: relative;
+}
 
-div {
-  border: 1px solid #333;
+.item::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 1000px; /* Длина линии */
+  border-bottom: 1px solid cornflowerblue; /* Стиль линии */
+}
+
+.price {
+  display: inline-block;
+}
+
+body {
+  width: 100%;
+  overflow: hidden;
+  background: #dedede;
+}
+
+a {
+  font-family: "PT Sans", sans-serif;
+}
+
+h1 {
+  font-family: "PT Sans", sans-serif;
+  font-size: 3rem;
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.5rem;
+}
+
+.text {
+  max-width: 800px;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+}
+
+.mobile-nav-button {
+  width: 35px;
+  position: absolute;
+  margin: 2rem;
+  right: 0;
+  top: 0;
+  z-index: 9999;
+  cursor: pointer;
+  width: 35px;
+  height: 30px;
+}
+.mobile-nav-button .mobile-nav-button__line {
+  width: 100%;
+  height: 4px;
+  background: #0e0e0e;
+  position: relative;
+  transition: 1s ease;
+}
+.mobile-nav-button .mobile-nav-button__line:nth-of-type(2) {
+  margin: 0.5rem 0;
+}
+.mobile-nav-button .mobile-nav-button__line--1 {
+  transform: rotate(45deg);
+  top: 13px;
+  position: absolute;
+}
+.mobile-nav-button .mobile-nav-button__line--2 {
+  display: none;
+}
+.mobile-nav-button .mobile-nav-button__line--3 {
+  transform: rotate(135deg);
+  top: 13px;
+  position: absolute;
+}
+
+.mobile-menu {
+  display: block;
+  max-width: 500px;
+  width: 100%;
+  right: -100%;
+  height: 100vh;
+  background: #fcb852;
+  position: absolute;
+  z-index: 9998;
+  transition: 0.6s ease;
+  top: 0;
+  opacity: 0;
+}
+.mobile-menu ul {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0;
+}
+.mobile-menu ul li {
+  list-style: none;
+}
+.mobile-menu ul li a {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #0e0e0e;
+  font-size: 3rem;
   font-weight: bold;
-  color: #42403e;
+  overflow: hidden;
+  position: relative;
+}
+.mobile-menu ul li a:after {
+  content: "";
+  background: #0e0e0e;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  right: -100%;
+  top: 0;
+  z-index: -1;
+  transition: 0.4s ease;
+}
+.mobile-menu ul li a:hover {
+  color: #fff;
+}
+.mobile-menu ul li a:hover:after {
+  right: 0;
+}
+.mobile-menu img {
+  position: absolute;
+  width: 150px;
+  display: block;
+  left: 50%;
+  top: 3rem;
+  transform: translatex(-50%);
+  padding: 0;
+  text-align: center;
+}
+
+.mobile-menu--open {
+  right: 0;
+  opacity: 1;
 }
