--- a/style.css
+++ b/style.css
@@ -682,6 +682,11 @@ header {
     flex-direction: column;
     align-items: center;
   }
+  .burger-menu-content.show {
+    display: block;
+  }
+  .close-icon {
+  }
 
   .image-feed {
     width: 450px;
